# Simulation

./: LICENSE  README.md
axis_by_axis/: CMakeLists.txt  package.xml
axis_by_axis/src/: trajectory.cpp
ets_vii/: CMakeLists.txt  package.xml
ets_vii/config/: effort_controllers.yaml  ros_controllers.yaml
ets_vii/launch/: axis_by_axis.launch  effort_controllers.launch  effort_controllers_indivudual.launch  effort_controllers_wgg.launch  ets_vii.launch  only_the_model.launch  trajectory.launch
ets_vii/log/: note.txt
ets_vii/rviz/: config.rviz
ets_vii/urdf/: ets_vii copy.xacro  ets_vii.xacro  ets_vii_gazebo.xacro  ets_vii_gazebo_old.xacro  ets_vii_gazebo_wgg.xacro  r2d2.xacro
ets_vii/worlds/: no_gravity.world  no_gravity_dart.world
orbit_msgs/: CMakeLists.txt  package.xml
orbit_msgs/msg/: orbit_msg.msg
orbit_publisher_pkg/: CMakeLists.txt  package.xml
orbit_publisher_pkg/config/: dynamic_orbit.yaml  fixed_orbit.yaml  orbit_parameters.yaml
orbit_publisher_pkg/include/orbit_publisher_pkg/: Orbit.h
orbit_publisher_pkg/launch/: basic.launch  basic_fix.launch
orbit_publisher_pkg/src/: Orbit.cpp  fix_orbit_publisher_pkg_node.cpp  orbit_publisher_pkg_node.cpp
orbit_robot_pkg/: CMakeLists.txt  package.xml
orbit_robot_pkg/include/orbit_robot_pkg/: OrbitLink.h
orbit_robot_pkg/src/: OrbitLink.cpp  Orbit_robot_pkg_plugin.cpp
