<?xml version="1.0"?>
<package format="2">
  <name>orbit_publisher_pkg</name>
  <version>0.0.1</version>
  <description>The orbit_publisher_pkg package</description>

   <maintainer email="jl.ramon@ua.es">Jose Luis Ramon</maintainer>

  <license>TODO pendiente de definir</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orbit_msgs</build_depend>
 
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>orbit_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  

    <export>
    
  </export>
</package>
